force-app/main/default/objects/Affiliate_Offer__c/Affiliate_Offer__c.object-meta.xml
<CustomObject>
    <label>Affiliate Offer</label>
    <nameField>
        <displayFormat>AFO-{000}</displayFormat>
        <label>Affiliate Offer Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliate Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>