force-app/main/default/objects/Affiliate_Offer__c/fields/Average_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Average_Order_Value__c</fullName>
    <label>Average Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>