force-app/main/default/objects/Affiliate_Offer__c/fields/Commission_Not_Passed_Refund_Period__c.field-meta.xml
<CustomField>
    <fullName>Commission_Not_Passed_Refund_Period__c</fullName>
    <label>Commissions Not Passed Refund Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>