force-app/main/default/objects/Affiliate_Offer__c/fields/Commissions_Earned__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Earned__c</fullName>
    <label>Commissions Earned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>