force-app/main/default/objects/Affiliate_Offer__c/fields/Commissions_Earned_for_Withdrawal__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Earned_for_Withdrawal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commissions Available for Withdrawal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>