force-app/main/default/objects/Affiliate_Offer__c/fields/Commissions_Paid_And_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Paid_And_Refunded__c</fullName>
    <label>Commissions Paid and Refunded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>