force-app/main/default/objects/Affiliate_Offer__c/fields/Commissions_Pending_Withdrawal__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Pending_Withdrawal__c</fullName>
    <label>Commissions Pending Withdrawal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>