force-app/main/default/objects/Affiliate_Offer__c/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <label>Offer</label>
    <referenceTo>Offer__c</referenceTo>
    <relationshipLabel>Affiliate Offers</relationshipLabel>
    <relationshipName>Affiliate_Offers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>