force-app/main/default/objects/Affiliate_Offer__c/fields/Recalculate_Commissions_Earned__c.field-meta.xml
<CustomField>
    <fullName>Recalculate_Commissions_Earned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalculate Commissions Earned</label>
    <type>Checkbox</type>
</CustomField>