force-app/main/default/objects/Affiliate_Offer__c/fields/Refund_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Refund_Transactions__c</fullName>
    <label>Refund Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>