force-app/main/default/objects/Affiliate_Offer__c/fields/Sub4__c.field-meta.xml
<CustomField>
    <fullName>Sub4__c</fullName>
    <label>Sub4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>