force-app/main/default/objects/Affiliate_Offer__c/fields/Sub5__c.field-meta.xml
<CustomField>
    <fullName>Sub5__c</fullName>
    <label>Sub5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>