force-app/main/default/objects/Affiliate_Offer__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <label>Token</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>