force-app/main/default/objects/Affiliate_Offer__c/fields/Total_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Total_Commissions__c</fullName>
    <label>Total Commissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>